--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     list-style: none;
     overflow: hidden;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -48,7 +49,7 @@ section {
     position: relative;
 
     & .list {
-        width: 110vh;
+        width: 140vh;
         height: 100%;
         margin: auto;
         position: relative;
@@ -66,8 +67,8 @@ section {
 
                 & img {
                     position: absolute;
-                    top: 55%;
-                    left: 5%;
+                    top: 50%;
+                    left: 3%;
                     width: 70%;
                     transform: rotate(-25deg) translateY(-50%);
                 }
@@ -80,7 +81,7 @@ section {
             height: 100%;
             display: flex;
             flex-direction: column;
-            justify-content: end;
+            justify-content: center;
             align-items: end;
             gap: 20px;
 
@@ -89,7 +90,8 @@ section {
             }
 
             & h2 {
-                font-size: 6em;
+                font-family: 'League Gothic', sans-serif ;
+                font-size: 8em;
                 line-height: 1em;
             }
 
@@ -109,6 +111,7 @@ section {
                 background-color: #beff1b;
                 color: #000;
                 cursor: pointer;
+                font-family: 'League Gothic', sans-serif ;
             }
         }
         &::before {
@@ -116,17 +119,17 @@ section {
             position: absolute;
             height: 200px;
             width: 100%;
-            top: 56%;
+            top: 50%;
             border-top: 1px solid #fff;
         }
     }
 
     .arrows {
-        width: 60%;
+        width: 75%;
         position: absolute;
         top: 50%;
-        left: 28%;
-        transform: translate(-15%, 25%);
+        left: 25%;
+        transform: translate(-15%, -50%);
         display: flex;
         justify-content: space-between;
         z-index: 2;
@@ -147,6 +150,7 @@ section {
             cursor: pointer;
 
             & img {
+                margin-top: 5px;
                 width: 30px;
                 cursor: pointer;
             }
@@ -170,6 +174,7 @@ section {
         gap: 15px;
 
         & .number {
+            font-family: 'League Gothic', sans-serif ;
             font-size: 5em;
         }
 
