--- a/styles.css
+++ b/styles.css
@@ -197,3 +197,72 @@ section {
     }
 }
 
+/* Animacoes */
+
+section {
+
+    & .list {
+
+        & .item { 
+            transform: translateX(100vw);
+            transition: 0.5s;
+            opacity: 0;
+
+            & .car-img {
+                & img {
+                    transform: rotate(0);
+                    transition: 0.5s;
+                    transition-delay: 0.3s;
+                }
+            }
+        }
+
+        & .content {
+            & .car-info, h2, .description, .infos {
+               transform: translateX(200px); 
+               transition: 0.7s;
+               transition-delay: 0.3s;
+               opacity: 0;
+            }
+            & h2 {
+                transition-delay: 0.5s;
+            }
+            & h2 {
+                transition-delay: 0.7s;
+            }
+            & h2 {
+                transition-delay: 0.9s;
+            }
+        }
+
+        & .active {
+            transform: translateX(0);
+            transition: 0.5s;
+            opacity: 1;
+
+            & .car-img {
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                width: 100%;
+                height: 100%;
+
+                & img {
+                    position: absolute;
+                    top: 50%;
+                    left: 3%;
+                    width: 70%;
+                    transform: rotate(-25deg) translateY(-50%);
+                }
+            }
+
+            & .content {
+                & .car-info, h2, .description, .infos {
+                   transform: translateX(0);
+                   opacity: 1; 
+                }
+        }
+
+        }
+    }
+}
